Fix gap between routines

--- a/src/orc/static/orc.css
+++ b/src/orc/static/orc.css
@@ -13,8 +13,8 @@ div.orc-room-buttons {
     
 div.orc-routine-buttons {
     display: flex;
-    flex-direction: horizontal;
     overflow: auto;
+    gap: 20px;
     justify-content: space-between;
 }
 
